11주차 메인페이지 업데이트

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                         <p>
                             <a href="./class/06_Javascript/08_javascript_BOM_hash/index.html">08_javascript_BOM_hash</a>
                         </p>
+                        <p>
+                            <a href="./class/06_Javascript/09_javascript_DOM_2/index.html">09_javascript_DOM_2</a>
+                        </p>
                     </li>
                 </ul>
             </div>
