--- a/class/07_Javascript_modern/03_function.html
+++ b/class/07_Javascript_modern/03_function.html
@@ -1,43 +1,181 @@
 <script>
-    //ES6에서 함수 도입 "화살표 함수" : =>
+    //ES6에서 함수 도입 "화살표 함수(Arrow Function)" : =>
     //비교연산자 : <=, >=
 
-    /* 기존함수 */
-    // 일반함수 : 직접 함수 호출
+    /*기존함수*/
+    //일반함수 : 직접 함수 호출
     function add1(a, b){
         return a + b;
     }
     console.log(add1(7, 8)); //15
 
-    // 익명함수 : 간접 함수 호출
+    //익명함수 : 간접 함수 호출
     var add2 = function(a, b){
         return a + b;
     }
     console.log(add2(7, 8)); //15
 
-    // react에서 일반 함수로 선언된 경우, export를 선언하여 다른 구성에서 사용 가능하도록 구조를 설계해야 함
+    //react에서 일반함수로 선언된 경우, export를 선언하여 다른 구성에서 사용 가능하도록 구조를 설계해야 함
 
     const add3 = function(c, d){
         return c + d;
     }
     console.log(add3(10, 20)); //30
 
-    // 화살표 함수 적용. function 단어 제거 / (소괄호)에 이어서 "=>"라는 기호만 작성한다. / 내부 실행문에 return 문만 존재한다면 삭제 가능 + {}중괄호도 삭제 가능
-    const add4 = (c, d) => c + d;
+    // 화살표 함수 적용. function 단어 제거 / (소괄호)에 이어서 "=>"라는 기호만 작성한다. /내부 실행문에 return 문만 존재한다면 삭제가능+{}중괄호도 삭제 가능
+    //#2. 함수실행
+    const add0 = function(c, d){  //#3. 매개변수 전달
+        console.log(c) //10
+        console.log(d) //20
+
+        return c + d; //#4. 리턴문으로 최종 결과를 add0이라는 곳에 저장
+    }
+    const add0_value = add0(10, 20);  //#1.add0(10, 20) //#5. add0_value라는 곳에 리턴받은 값을 저장
+    console.log(`add0_value의 최종결과 : ${add0_value}`);
+
+    const add4 = (c, d) => c + d; 
     console.log(add4(10, 20)); //30
 
     const add5 = (e, f) => {
-        let rst;
-        return e + f;
+        let rst = e + f;
+        return rst;
     }
     console.log(add5(10, 20));
 
+    const add6 = g => g + 9;  
+    console.log(add6(5, 6)); //14
+
+    const add7 = h => {
+        console.log(h); //5
+        return h + 3 
+    }
+    console.log(add7(5, 7)); //8
+
+    //function으로 시작되는 함수 -> Hoisting : 함수문의 위치에서 함수를 호출할 수 있는가에 대한 문제
+    fnc1(); //fnc1 호출에 대한 응답
+    function fnc1(){
+       console.log(`fnc1 호출에 대한 응답`);
+    }
+    // fnc1(); //fnc1 호출에 대한 응답
+
+    //자바스크립트의 기반의 언어들은 get방식(어떤 데이터를 가져오는 방식)으로 문서가 작성된 순서대로 로딩을 하도록 유도하는 것이 필요 
+    
+    // fnc2();  //Uncaught ReferenceError: Cannot access 'fnc2' before initialization
+    const fnc2 = () => {
+        console.log(`fnc2 호출에 대한 응답`)
+    }
+    fnc2(); //fnc2 호출에 대한 응답
+
+    //Hoisting막을 수 있는 방법은 const로 선언하여 함수문을 작성한다.
+    //[실습] 세수의 합을 계산하는 방식으로 함수를 구성하시오. (화살표 함수를 이용하여 "최종합계: 6"이라는 문구를 콘솔창에 출력하시오.) 최초 전달 데이터는 1, 2, 3
+    const ex1 = (i, j, k) => i + j + k
+    console.log(`최종합계: ${ex1(1, 2, 3)}`); //최종합계: 6
+
+    //최초 전달 데이터는 1, 2, 3 으로부터 더한 값에 2배를 곱한 결과값을 출력하시오. 출력결과는 "최종결과: 12"
+    const ex2 = (i, j, k) => {
+        let rst = i + j + k;
+        rst = rst * 2;
+        return rst;
+    }
+    console.log(`최종결과: ${ex2(1, 2, 3)}`); //최종결과: 12
+</script>
+
+<!-- #1. "스누피"라는 문구를 "카카오"로 변경-->
+<!-- #2. "스누피"라는 문구를 "스머프"로 변경 + 함수내부에서 리턴을 받아서 콘손창에 작성(콘솔창의 결과물은 "스머프 랄랄라~") -->
+<!-- 함수 호출간에 던져진 값을 매개변수로 받아서 구성할 것 -->
+<h1 id="ch_txt">스누피</h1>
+<script>
+    //#1
+    const changeText1 = (str) => {
+        console.log(str); //"카카오"
+        console.log(document.querySelector("#ch_txt")); //<h1 id="ch_txt">스누피</h1>
+        document.querySelector("#ch_txt").textContent = str
+    } 
+    changeText1("카카오");
+    //#2
+    const changeText2 = str => {
+        console.log(str); //"스머프"
+        document.querySelector("#ch_txt").textContent = str
+        return `${str} 랄랄라~`
+    }
+    console.log(changeText2("스머프"));
+</script>
+
+<h3 id="arrowFunc_this">화살표함수와 this 키워드</h3>
+<a href="https://www.naver.com" onkeydown="this.href">링크</a> 
+<!-- 태그 내부의 this는 태그 자체를 가리킴 : 접근성에서 매우 중요 -->
+<script>
+    const person0 = new Object(); // 객체의 인스턴트 메모리화 ==> {}
+    person0["age"] = 15;
+    console.log(person0); //{age: 15}
 
 
+    //객체는 속성과 메서드로 구성
+    const person1 = {
+        age: 10, //일반 속성
+        grow: function(){ //메서드(매년 1살씩 증가)
+            console.log(this); //{age: 10, grow: ƒ} person1
+            console.log(this.age); //person1.age
+            this.age++;
+            console.log(this.age); //11
+        }
+        // const grow = function(){}
+    }
+    console.log(person1); //{age: 10, grow: ƒ}
+    console.log(person1.age); //10
+    person1.grow();
 
+    const person2 = {
+        age: 10,
+        grow: () => {
+            console.log(this) //Window {window: Window, self: Window, document: document, name: '', location: Location, …} 최상위 객체를 가리킨다.
+            this.age++;
+            console.log(this.age); //Window.age => NaN
+        }
+    }
+    person2.grow();
+</script>
 
+<div class="box open">박스공간</div>
+<style>
+    .open{width: 200px; height: 200px; border: 1px solid #00f; display: flex; justify-content: center; align-items: center; cursor: pointer;}
+    .opening{background-color: #ff8;}
+</style>
+<script>
+    const $box = document.querySelector(".box");
+    // $box.addEventListener("click", function(){
+    //     console.log(this); //<div class="box open">박스공간</div>
+    //     this.classList.add("opening");
+    // });
+    $box.addEventListener("click", () => {
+        console.log(this); //Window {window: Window, self: Window, document: document, name: '', location: Location, …}
+        this.classList.add("opening"); //Uncaught TypeError: Cannot read properties of undefined (reading 'add') at HTMLDivElement.
+    });
 
+    //이벤트에 의한 일반함수(function 으로 작성된)와 화살표 함수의 this의 차이
+    //일반함수에서는 이벤트가 발생한 곳을 지정하여 하나의 영역으로 접근할 수 있음
+    //화살표 함수에서는 이벤트가 발생한 곳이 아닌 최상위 객체인 Windows라는 곳을 가리킴
+</script>
 
+<!-- arguments 객체 -->
+<script>
+    //일반함수 내에서 arguments 객체 선언
+    function example0(){
+        console.log(arguments); //Arguments(3) [1, 2, 3, callee: ƒ, Symbol(Symbol.iterator): ƒ]
+        console.log(arguments[1]);
+    }
+    example0(1, 2, 3);
 
+    //화살표 함수 내에서 arguments 객체 선언
+    const example1 = () => {
+        // console.log(arguments); //Uncaught ReferenceError: arguments is not defined
+    }
+    example1("현대", "삼성", "LG");
+
+    const example2 = (...args) => {
+        console.log(args); //['현대', '삼성', 'LG']
+        console.log(args[1]);
+    }
+    example2("현대", "삼성", "LG");
 
 </script>
