--- a/class/react/03_React_03_func/html/02_jsx_web.html
+++ b/class/react/03_React_03_func/html/02_jsx_web.html
@@ -6,10 +6,9 @@
     <title>02_jsx_web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/common.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" ajw="안재욱"></div>
 
     <div id="header"></div>
 
@@ -40,16 +39,13 @@
     <div id="footer">
         <!-- <div class="container">
             <ul class="row">
-                <li><a href="">Intro</a></li>
-                <li><a href="">Location</a></li>
-                <li><a href="">Event</a></li>
+                <li><a href="/intro">Intro</a></li>
+                <li><a href="/location">Location</a></li>
+                <li><a href="/event">Event</a></li>
             </ul>
         </div>
         <p>&copy; Ice Cream House.LTD</p> -->
-
-
     </div>
-
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
