--- a/class/react/03_React_03_func/html/04_props.html
+++ b/class/react/03_React_03_func/html/04_props.html
@@ -6,16 +6,14 @@
     <title>Props</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/common.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 <body>
-    
-
-
-
     <div id="root1"></div>
-    <hr/>
+    <hr />
     <div id="root2"></div>
+    <hr />
+    <div id="root3"></div>
+
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
