--- a/class/react/03_React_03_func/html/06_state_data.html
+++ b/class/react/03_React_03_func/html/06_state_data.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>component</title>
+    <title>state_data</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/common.css">
 </head>
 <body>
-    
+    <h2>class로 구성된 state</h2>
     <div id="root"></div>
+    <hr />
+    <h2>useState 적용(with Hooks)</h2>
+    <div id="root-hook"></div>
+
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel" src="../js/03_component.js"></script>
+    <script type="text/babel" src="../js/06_state_data.js"></script>
 </body>
 </html>
